; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_hlsl.tab.c_free_parse_initializer.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_hlsl.tab.c_free_parse_initializer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parse_initializer = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.parse_initializer*)* @free_parse_initializer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_parse_initializer(%struct.parse_initializer* %0) #0 {
  %2 = alloca %struct.parse_initializer*, align 8
  %3 = alloca i32, align 4
  store %struct.parse_initializer* %0, %struct.parse_initializer** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %19, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.parse_initializer*, %struct.parse_initializer** %2, align 8
  %7 = getelementptr inbounds %struct.parse_initializer, %struct.parse_initializer* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp ult i32 %5, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %4
  %11 = load %struct.parse_initializer*, %struct.parse_initializer** %2, align 8
  %12 = getelementptr inbounds %struct.parse_initializer, %struct.parse_initializer* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @free_instr(i32 %17)
  br label %19

19:                                               ; preds = %10
  %20 = load i32, i32* %3, align 4
  %21 = add i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %4

22:                                               ; preds = %4
  %23 = load %struct.parse_initializer*, %struct.parse_initializer** %2, align 8
  %24 = getelementptr inbounds %struct.parse_initializer, %struct.parse_initializer* %23, i32 0, i32 1
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @d3dcompiler_free(i32* %25)
  ret void
}

declare dso_local i32 @free_instr(i32) #1

declare dso_local i32 @d3dcompiler_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
